--- a/default_conf.yml
+++ b/default_conf.yml
@@ -24,25 +24,37 @@ n_runs: 4
 # experiments_dir/exp_id/metrics.csv
 # experiments_dir/exp_id/conf.yaml
 
-# data paths. If null, will use the Hyperparameter's default settings.
-data_paths:
-    train_docs_file: null
-    train_words_file: null
-    val_docs_file: null
+# overriding the trainers hp -> If null, will use the Hyperparameter's default settings.
+hyperparameter:
+    train_docs_file: /Users/victor/Documents/Tracfin/dev/han/data/yelp/tf-prepared/sample_0001_train_07/documents.txt
+    train_labels_file: /Users/victor/Documents/Tracfin/dev/han/data/yelp/tf-prepared/sample_0001_train_07/labels.txt
+    train_words_file: /Users/victor/Documents/Tracfin/dev/han/data/yelp/tf-prepared/sample_0001_train_07/words.txt
+    val_docs_file: /Users/victor/Documents/Tracfin/dev/han/data/yelp/tf-prepared/sample_0001_val_01/documents.txt
+    val_labels_file: /Users/victor/Documents/Tracfin/dev/han/data/yelp/tf-prepared/sample_0001_val_01/labels.txt
+    multilabel: false
+    num_classes: 5
 
 randomizable_params:
     # * type: 
     #   if range -> the value will be drawn from np.arange(min, max, step)
+    #      required fields: min, max, step
     #   if list -> the value will be drawn from np.array(values)
+    #      required field: vals (list of values)
     #   if fixed -> no drawing, deterministic value
+    #      required field: value
     #
     # * distribution:
-    #   either uniform or normal. If normal, a value is drawn according to its index in the list of values:
+    #   Either deterministic, uniform or normal. 
+    #   If normal, a value is drawn according to its index in the list of values:
     #       mean: middle of list, std: len(list) / 5 | see tcl.utils.normal_choice
-    # 
+    #   If deterministic, then the value will be picked sequentially in the values list/range
+    #       as value = current_run % len(values)
+    #
     # * min, max, step: arguments to np.arange ; use with type: range
     #
     # * vals: user-specified values the parameter can take ; use with type: list
+    #
+    # * value: user-specified value for the parameter ; use with type: fixed
 
     batch_size:
         type: range
