--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 absl-py==0.6.0
+appdirs==1.4.3
 appnope==0.1.0
 astor==0.7.1
 atomicwrites==1.2.1
 attrs==18.2.0
 backcall==0.1.0
+black==18.9b0
 bleach==1.5.0
 boto==2.49.0
 boto3==1.9.31
@@ -11,6 +13,7 @@ botocore==1.12.31
 bz2file==0.98
 certifi==2018.10.15
 chardet==3.0.4
+Click==7.0
 cycler==0.10.0
 decorator==4.3.0
 docutils==0.14
@@ -55,6 +58,7 @@ smart-open==1.7.1
 tensorboard==1.7.0
 tensorflow==1.7.0
 termcolor==1.1.0
+toml==0.10.0
 traitlets==4.3.2
 urllib3==1.24
 wcwidth==0.1.7
